With "Resume Playback On Startup", only ever resume local tracks. When resuming e.g. Last.fm the result can be very grave side effects, like Amarok not progressing to the next track.

BUG: 172897

svn path=/trunk/extragear/multimedia/amarok/; revision=873843